# masters-thesis

./: .gitignore  README.md  plot_metrics.ipynb  server.py
flower/: pyproject-DP.toml  pyproject-normal.toml  pyproject.toml  pyproject_DP.toml  pyproject_normal.toml  run_experiments.py
flower/flower_DP/: centralized.py  client.py  client_app.py  server.py  server_app.py  task.py
flower/flower_normal/: __init__.py  centralized.py  client.py  client_app.py  metrics.txt  server.py  server_app.py  task.py
pfl/: Introduction to Differential Privacy with Federated Learning.ipynb  REAMDE.md  TODO.md  centralized.py  create_federated_dataset.ipynb  pfl.ipynb
