[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flower_normal"
version = "1.0.0"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.15.2",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "ruben"

[tool.flwr.app.components]
serverapp = "flower_normal.server_app:app"
clientapp = "flower_normal.client_app:app"

[tool.flwr.app.config]
# Server configuration
# How many server rounds, we are using
num-server-rounds = 10
# Fraction of clients used during training: In case of 0.5, half of the clients are used for training
fraction-fit = 0.5
# Fraction of clients used during validation: In case of 0.5, half of the clients are used for validation
fraction-evaluate = 0.5

# Client configuration
# How many epochs the client is training
local-epochs = 5

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 100