[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flower_normal"
version = "1.0.0"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "ruben"

[tool.flwr.app.components]
serverapp = "flower_normal.server_app:app"
clientapp = "flower_normal.client_app:app"

[tool.flwr.app.config]
# Server configuration
# How many server rounds, we are using
#num-server-rounds = 50
num-server-rounds = 1

# Fraction of clients used during training: In case of 0.5, half of the clients are used for training
fraction-fit = 1
# Fraction of clients used during validation: In case of 0.5, half of the clients are used for validation
fraction-evaluate = 1

# Client configuration
# How many epochs the client is training
#local-epochs = 4
local-epochs = 25
learning-rate = 0.01
batch-size = 32
weight-decay = 0.00001

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
#options.num-supernodes = 8
options.num-supernodes = 1